<resources>
    <string name="app_name">MeuPrimeiroAppKt</string>
    <string name="titulo_cadastro">Cadastre-se</string>
    <string name="titulo_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_senha">Senha </string>
    <string name="texto_botao_cadastrar">Cadastrar</string>
    <string name="texto_botao_entrar">Acessar</string>
    <string name="texto_acesso_cadastro">Criar conta</string>
    <string name="texto_botao_deslogar">Sair</string>
    <string name="texto_botao_transparencia">Orçamento</string>
    <string name="texto_botao_editais">Editais</string>
    <string name="texto_botao_eventos">Eventos</string>
    <string name="texto_botao_turismo">Turismo</string>
    <string name="texto_botao_contatosUteis">Contatos</string>
    <string name="titulo_tela_editais">Editais</string>
    <string name="titulo_tela_principal">INFORMAÇÕES GERAIS</string>
    <string name="titulo_tela_eventos">Eventos</string>
    <string name="titulo_tela_turismo">Turismo</string>
    <string name="titulo_tela_orcamento">Orçamento</string>
    <string name="titulo_tela_contatos">Contatos</string>
    <string name="texto_edital_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vel lacus tempor, hendrerit nunc eu, convallis nisi.
   Curabitur vel arcu hendrerit, finibus mauris quis, mollis turpis. Maecenas maximus sem sed sem imperdiet porta.
   Praesent erat velit, lacinia ac maximus a, placerat lobortis justo. Vestibulum posuere pulvinar lacus nec condimentum.
   Aliquam faucibus sem in lectus pulvinar eleifend sed et massa. Aliquam ut volutpat ante, quis consectetur leo.
   Mauris laoreet faucibus tortor, venenatis vulputate erat aliquam sed. Sed pretium a nibh eget luctus.</string>

    <string name="texto_edital_0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vel lacus tempor, hendrerit nunc eu, convallis nisi.
   Curabitur vel arcu hendrerit, finibus mauris quis, mollis turpis. Maecenas maximus sem sed sem imperdiet porta.
   Praesent erat velit, lacinia ac maximus a, placerat lobortis justo. Vestibulum posuere pulvinar lacus nec condimentum.
   Aliquam faucibus sem in lectus pulvinar eleifend sed et massa. Aliquam ut volutpat ante, quis consectetur leo.
   Mauris laoreet faucibus tortor, venenatis vulputate erat aliquam sed. Sed pretium a nibh eget luctus.</string>

    <string name="texto_edital_2">  Pellentesque nec mi et arcu iaculis pellentesque et vitae nulla. Nulla vel lacus tempor, hendrerit nunc eu, convallis nisi.
   Curabitur vel arcu hendrerit, finibus mauris quis, mollis turpis. Maecenas maximus sem sed sem imperdiet porta.
   Praesent erat velit, lacinia ac maximus a, placerat lobortis justo. Vestibulum posuere pulvinar lacus nec condimentum.
   Aliquam faucibus sem in lectus pulvinar eleifend sed et massa. Aliquam ut volutpat ante, quis consectetur leo.
   Mauris laoreet faucibus tortor, venenatis vulputate erat aliquam sed. Sed pretium a nibh eget luctus.</string>

    <string name="texto_edital_3"> Nulla vel lacus tempor, hendrerit nunc eu, convallis nisi. Curabitur vel arcu hendrerit, finibus mauris quis, mollis turpis.
   Maecenas maximus sem sed sem imperdiet porta. Praesent erat velit, lacinia ac maximus a, placerat lobortis justo.
   Vestibulum posuere pulvinar lacus nec condimentum. Aliquam faucibus sem in lectus pulvinar eleifend sed et massa.
   Aliquam ut volutpat ante, quis consectetur leo. Mauris laoreet faucibus tortor, venenatis vulputate erat aliquam sed.
   Sed pretium a nibh eget luctus. </string>

    <string name="texto_edital_4"> PeCurabitur vel arcu hendrerit, finibus mauris quis, mollis turpis. Maecenas maximus sem sed sem imperdiet porta.
   Praesent erat velit, lacinia ac maximus a, placerat lobortis justo. Vestibulum posuere pulvinar lacus nec condimentum.
   Aliquam faucibus sem in lectus pulvinar eleifend sed et massa. Aliquam ut volutpat ante, quis consectetur leo.
   Mauris laoreet faucibus tortor, venenatis vulputate erat aliquam sed. Sed pretium a nibh eget luctus.  </string>

    <string name="texto_edital_5">  Lorem ipsum dolor sit amet, convallis nisi. Curabitur vel arcu hendrerit, finibus mauris quis, mollis turpis.
   Maecenas maximus sem sed sem imperdiet porta. Praesent erat velit, lacinia ac maximus a, placerat lobortis justo.
   Vestibulum posuere pulvinar lacus nec condimentum. Aliquam faucibus sem in lectus pulvinar eleifend sed et massa.
   Aliquam ut volutpat ante, quis consectetur leo. Mauris laoreet faucibus tortor, venenatis vulputate erat aliquam sed.
   Sed pretium a nibh eget luctus. </string>

    <string name="texto_edital_6"> Pellentesque nec mi et arcu iaculis pellentesque et vitae nulla. Nulla vel lacus tempor, hendrerit nunc eu, convallis nisi.
   Curabitur vel arcu hendrerit, finibus mauris quis, mollis turpis. Maecenas maximus sem sed sem imperdiet porta.
   Praesent erat velit, lacinia ac maximus a, placerat lobortis justo. Vestibulum posuere pulvinar lacus nec condimentum.
   Aliquam faucibus sem in lectus pulvinar eleifend sed et massa. Aliquam ut volutpat ante, quis consectetur leo.
   Mauris laoreet faucibus tortor, venenatis vulputate erat aliquam sed. Sed pretium a nibh eget luctus.</string>

    <string name="texto_edital_7"> Curabitur vel arcu hendrerit, finibus mauris quis, mollis turpis. Maecenas maximus sem sed sem imperdiet porta.
   Praesent erat velit, lacinia ac maximus a, placerat lobortis justo. Vestibulum posuere pulvinar lacus nec condimentum.
   Aliquam faucibus sem in lectus pulvinar eleifend sed et massa. Aliquam ut volutpat ante, quis consectetur leo.
   Mauris laoreet faucibus tortor, venenatis vulputate erat aliquam sed. Sed pretium a nibh eget luctus. </string>
    <string name="texto_eventos_1">Festival de artesanatos</string>
    <string name="texto_eventos_2">Encontro Municipal</string>
    <string name="texto_eventos_3">Baile da Princesa</string>
    <string name="texto_turismo_1">Columbia Goland</string>
    <string name="texto_turismo_2">Boca Chica</string>
    <string name="texto_turismo_3">Praia Limpa</string>
    <string name="texto_turismo_4">Escalada Solar</string>
    <string name="botao_orcamento_1">Receitas</string>
    <string name="botao_orcamento_2">Despesas</string>
    <string name="botao_orcamento_3">Licitações</string>
    <string name="botao_orcamento_4">Contratos</string>
    <string name="botao_orcamento_5">Convênios</string>
    <string name="botao_orcamento_6">Relatórios</string>
    <string name="botao_orcamento_7">Patrimônios</string>
    <string name="imagem_bandeira_municipio">Bandeira do municipio cor azul com cruz verde com contornos amarelos </string>
    <string name="imagem_telefone">telefone</string>
    <string name="imagem_email">ícone de email</string>
    <string name="texto_centrosocial_telefone">Centro Social: (18) 3698 4574</string>
    <string name="texto_centrosocial_email">centrosocial@gmail.com</string>
    <string name="texto_gabinete_prefeito_telefone">Gabinete: (18) 3701 3625</string>
    <string name="texto_gabinete_prefeito_email">gabinetemunicipal@gmail.com.br</string>
    <string name="texto_departamento_obras_telefone">Departamento de obras: (18) 3701 2231</string>
    <string name="texto_departamento_obras_email">departamentodeobras@gmail.com</string>
    <string name="texto_balcaodeemprego_telefone">Balacão de emprego: (18) 3501 4178</string>
    <string name="texto_balcaodeemprego_email">balcaodeemprego@gmail.com</string>

</resources>