<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:gravity="center|top"
        android:backgroundTint="@color/light_gray"
        tools:context=".view.orcamento.TelaOrcamento">


        <TextView
            android:id="@+id/editais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_tela_orcamento"
            android:layout_marginTop="18dp"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="144dp"
            android:layout_height="143dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/imagem_bandeira_municipio"
            app:srcCompat="@drawable/bandeira" />

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:textSize="16sp"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textColorHint="@color/dark_blue"
            android:text="@string/botao_orcamento_1" />

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="16sp"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textColorHint="@color/dark_blue"
            android:text="@string/botao_orcamento_2" />

        <Button
            android:id="@+id/button10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="16sp"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textColorHint="@color/dark_blue"
            android:text="@string/botao_orcamento_3" />

        <Button
            android:id="@+id/button11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="16sp"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textColorHint="@color/dark_blue"
            android:text="@string/botao_orcamento_4" />

        <Button
            android:id="@+id/button12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="16sp"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textColorHint="@color/dark_blue"
            android:text="@string/botao_orcamento_5" />

        <Button
            android:id="@+id/button13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="16sp"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textColorHint="@color/dark_blue"
            android:text="@string/botao_orcamento_7" />

        <Button
            android:id="@+id/button14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="16sp"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textColorHint="@color/dark_blue"
            android:text="@string/botao_orcamento_6" />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>